[tool.poetry]
name = "pastel-gateway-sdk"
version = "0.1.1"
description = "Pastel Network Gateway SDK"
authors = ["Pastel Network Team <team@pastel.network>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/pastelnetwork/gateway-sdk-py.git"
keywords = ["Pastel Network API Gateway SDK"]
include = ["gateway-client/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
aiohttp-retry = ">= 2.8.3"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
